Flash cards' default bg now white to improve visibility & contrast. Fixed minor X icon offset.

--- a/src/player.scss
+++ b/src/player.scss
@@ -310,7 +310,6 @@ body {
 
 				&:hover  { cursor: pointer; }
 				&:focus  .back, &:focus .front {
-					background-color: #fff;
 					outline: 1px solid blue;
 				}
 
@@ -594,7 +593,7 @@ body {
 					left             : 0;
 					height           : 100%;
 					width            : 100%;
-					background-color : $a;
+					background-color : #fff;
 
 					display: flex;
 					flex-direction: column;
@@ -704,17 +703,20 @@ body {
 		}
 
 		#icon-remove {
-			position    : absolute;
-			right       : 50px;
-			top         : 65%;
-			height      : 50px;
-			width       : 50px;
-			line-height : 30px;
-			font-size   : 36px;
-			z-index		: 20;
-			border		: none;
-			border-radius: 50%;
-			color 		: $g;
+			display         : flex;
+			justify-content : center;
+			align-items     : center;
+			position        : absolute;
+			right           : 50px;
+			top             : 65%;
+			height          : 50px;
+			padding-top     : 5px;
+			width           : 50px;
+			font-size       : 36px;
+			z-index		    : 20;
+			border		    : none;
+			border-radius   : 50%;
+			color 		    : $g;
 			background-color: $a;
 
 			-webkit-transition : 200ms all;
